<resources>
    <string name="app_name">Tip Time</string>
    <string name="calculate">Calculate</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing(20%)</string>
    <string name="good_service">Good(18%)</string>
    <string name="okay_service">Okay(15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <!--Add string formating with Android framework
    the format will be applied in %s    -->
    <string name="tip_amount">Tip Amount %s</string>
</resources>